@@ -93,7 +93,7 @@ rtemsdoc/Makefile
 AC_CONFIG_FILES([buildalltar],[chmod +x buildalltar])
 AC_CONFIG_FILES([buildall],[chmod +x buildall])
 AC_CONFIG_FILES([gdb/mkspec],[chmod +x gdb/mkspec])
-AC_CONFIG_FILES([mkbinutilspec],[chmod +x mkbinutilspec])
+AC_CONFIG_FILES([binutils/mkspec],[chmod +x binutils/mkspec])
 AC_CONFIG_FILES([mkgccnewlibspec],[chmod +x mkgccnewlibspec])
 AC_CONFIG_FILES([mkbspspec],[chmod +x mkbspspec])
 AC_CONFIG_FILES([gcc3newlib/mkspec],[chmod +x gcc3newlib/mkspec])
